--- a/paco/blueprints/main/templates/landing_driver.html
+++ b/paco/blueprints/main/templates/landing_driver.html
@@ -14,7 +14,7 @@
                 <img src="{{ url_for('static', filename='images/corporate_memphis/undraw_on_the_way_re_swjt.svg') }}" class="d-block mx-lg-auto img-fluid" alt="Deliveries" loading="lazy">
             </div>
             <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">The <b>smartest</b> and <b>easiest</b> way to save some money while traveling</h1>
+                <h1 class="display-5 fw-bold lh-1 mb-3">The <b class="text-primary">smartest</b> and <b class="text-success">easiest</b> way to save some money while traveling</h1>
             <p class="lead">Try it out now!</p>
                 <a href="{{ url_for('auth.signup') }}" class="btn btn-success btn-lg text-white rounded-pill w-100">Sign up now</a>
             </div>
