--- a/paco/blueprints/main/templates/landing_user.html
+++ b/paco/blueprints/main/templates/landing_user.html
@@ -14,7 +14,7 @@
                 <img src="{{ url_for('static', filename='images/corporate_memphis/undraw_deliveries_2r4y.svg') }}" class="d-block mx-lg-auto img-fluid" alt="Deliveries" loading="lazy">
             </div>
             <div class="col-lg-6">
-                <h1 class="display-5 fw-bold lh-1 mb-3">The <b>fastest</b> and <b>cheapest</b> way to send a parcel to your friends</h1>
+                <h1 class="display-5 fw-bold lh-1 mb-3">The <b class="text-success">greenest</b> and <b class="text-primary">cheapest</b> way to send a parcel to your friends</h1>
                 <!-- <p class="lead">Try it out now</p> -->
                 <form class="p-1 p-md-1 form-floating"
                         {% if current_user.is_authenticated and current_user.email_confirmed %}
