--- a/paco/blueprints/main/templates/landing_user.html
+++ b/paco/blueprints/main/templates/landing_user.html
@@ -86,8 +86,7 @@
                 </svg>
                 <h5>Scroll, click, tap, send and track
                 </h5>
-                <p>Sending a parcel has never been easier!  Thanks to our easy to use app, your next delivery is just a couple of minutes away! And tracking is available to you real time!
-                </p>
+                <p>Sending a parcel has never been easier!  Thanks to our easy to use app, your next delivery is just a couple of minutes away!                 </p>
             </div>
         </div>
 
@@ -95,8 +94,8 @@
         <div class="row border-top pt-3 mb-3">
             <h3>Where do you want to ship it?</h3>
             <div class="row mb-3 text-muted">
-            <h5>Prices start from:</h5>
-        </div>
+                <h5>Prices start from:</h5>
+            </div>
         </div>
 
         <div class="container">
